# CUDA-Benchmark

./: CMakeLists.txt  README.md
cuda/: readme.md
cuda/imageDenoising/: Makefile  bmploader.cpp  imageDenoising.h  imageDenoisingGL.cpp
docs/: length-коэффициенты.json  three_point_exponent_progression.ods  three_point_square_progression.ods  work_result_(wbwbf).ods
sigma-vue/: README.md  docker-compose.yml  index.html  package-lock.json  package.json
sigma-vue/config/: index.js
sigma-vue/src/components/: graph.vue
sigma-vue/src/router/: index.js
src/: main.cpp
src/libs/algo/: func.c  func.h  modifier.cpp  modifier.h  random.cpp  random.h
src/libs/neuralnet/: Perceptron.cpp  Perceptron.h
src/libs/neuralnet/CUDA/: kernel.cu  kernel.cuh  kernel.h
src/libs/neuralnet/modes/: arithmetical_mean_train.cpp  arithmetical_mean_train_v2.cpp  basic_brute_force.cpp  smart_brute_force_initialization.cpp  smart_direct_brute_force.cpp  wbw_brute_force.cpp
src/libs/objects/: array.h  pair.h
src/libs/utils/: logger.h
tests/: main.cpp
tests/units/: random_unit_fraction.h
